# rustproj

./: Cargo.toml  attack-timelines.txt  file.txt  output.json  syslog.syslog
src/: main.rs
