[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
ipgeolocate = "0.3.5"
file = "1.1.2"
chrono = "0.4"
async-std = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
lettre = "0.11.15"
lettre_email = "0.9"
dotenv = "0.15.0"
