
[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
ipgeolocate = "0.3.5"
file = "1.1.2"
time = { version = "0.3.41" }
chrono = "0.4"
async-std = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
lettre = "0.11.15"
dotenvy = "0.15"
evtx = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
